--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -6,3 +6,9 @@
   letter-spacing: 0em;
   text-align: left;
 }
+
+@media screen and (max-width: 797px) {
+  .place__link {
+    margin-left: 16px;
+  }
+}
