--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -3,12 +3,12 @@
   font-weight: 400;
   line-height: 29px;
   letter-spacing: 0em;
-  text-align: left;
 }
 
 @media screen and (max-width: 1023px) {
   .place__text {
     font-size: 16px;
-    line-height: 26px;
+    line-height: 26.08px;
+    margin: 0 16px;
   }
 }
