--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,7 @@
 @import "../blocks/place/__paragraph/place__paragraph.css";
 
 @import "../blocks/cover/cover.css";
+@import "../blocks/cover/__background/cover__background.css";
 @import "../blocks/cover/__title/cover__title.css";
 @import "../blocks/cover/__subtitle/cover__subtitle.css";
 
