--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,14 +3,14 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .cover__background {
+  .cover {
     margin-top: 90px;
     margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .cover__background {
+  .cover {
     margin-top: 66px;
     margin-bottom: 64px;
   }
