--- a/blocks/footer/__nav-links/footer__nav-links.css
+++ b/blocks/footer/__nav-links/footer__nav-links.css
@@ -1,4 +1,7 @@
 .footer__nav-links {
+  margin: 0;
+  padding: 0;
+  list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
