--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,8 +1,17 @@
 .header__lang {
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  list-style: none;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   text-align: right;
+  display: flex;
+}
+
+.header__lang > :first-child {
+  margin-right: 18px;
 }
 
 @media screen and (max-width: 767px) {
