--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,12 @@
 .lead__caption {
+  margin: 0;
   font-size: 10px;
   line-height: 14px;
   font-weight: normal;
   letter-spacing: 0.15em;
   text-transform: uppercase;
   align-self: start;
-  margin-top: 8px;
+  margin-top: 5px;
 }
 
 @media screen and (max-width: 1023px) {
