--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,6 @@
 .lead__image {
-  background-image: url("../../../images/lead__image.jpg");
-  background-position: center;
-  background-size: cover;
+  margin: 0;
+  padding: 0;
   width: 100%;
   min-height: 615px;
 }
