--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,6 @@
 .place__link {
   text-decoration: underline;
+  color: var(--color_text);
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -7,7 +8,7 @@
   text-align: left;
 }
 
-@media screen and (max-width: 797px) {
+@media screen and (max-width: 767px) {
   .place__link {
     margin-left: 16px;
   }
