--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,4 +1,6 @@
 .place__text {
+  margin: 0;
+  padding: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 29px;
@@ -8,7 +10,12 @@
 @media screen and (max-width: 1023px) {
   .place__text {
     font-size: 16px;
-    line-height: 26.08px;
+    line-height: 163%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__text {
     margin: 0 16px;
   }
 }
